# bevy-space-game-2

./: Cargo.toml
config/: default-spaceship.ron
src/: asset_loader.rs  background.rs  camera.rs  controller.rs  debug.rs  durability.rs  fuel.rs  game_state.rs  health.rs  main.rs  particle_effects.rs  power.rs  projectiles.rs  schedule.rs  spaceship.rs  state.rs  system_status.rs  temperature.rs  thrusters.rs  weapons.rs
