[package]
name = "learn-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.0", features = [
    "dynamic_linking",
] } # Remove dynamic linking on release
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = "0.8.5"
avian2d = { version = "0.1.2", git = "https://github.com/Jondolf/avian", branch = "main" }
bevy_enhanced_input = "0.5.0"
bevy_aseprite_ultra = "0.4.1"
bevy_hanabi = { version = "0.14", default-features = false, features = ["2d"] }
bitflags = "2.6.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
